# trading-bot

./: .env.template  .gitignore  CLAUDE.md  CMakeLists.txt  PENTEST_REPORT_2026-03-11.md  README.md
config/: bot_config.json
data/: backtest_history.json  last_sync.json
data/analysis/: ETH_15m_report.md  ETH_1h_regime_report.md  ETH_1h_report.md  ETH_4h_report.md  SOL_15m_report.md  SOL_1h_regime_report.md  SOL_1h_report.md  SOL_4h_report.md
data/backtest_results/: bb_scalp_15m_BTC.json  bb_scalp_15m_ETH.json  elder_mtf_15m_ETH.json  ema_adx_trend_4h_BTC.json  full_report_20260311_113354.csv  multi_period_20260311_011107.csv  multi_period_20260311_013555.csv  parse_quick.py  sol_doge_results.csv  summary_20260311_003346.csv  summary_20260311_004452.csv  summary_20260311_004502.csv  summary_20260311_004514.csv  summary_20260311_004522.csv  triple_confirm_15m_BTC.json  triple_confirm_15m_ETH.json  vwap_reversion_15m_ETH.json
data/backtest_results/market_periods/: bear_2022_regime_adaptive_1h_ETH.json  bear_2022_regime_adaptive_1h_SOL.json  bull_2020_21_regime_adaptive_1h_ETH.json  bull_2020_21_regime_adaptive_1h_SOL.json  bull_ath_2024_regime_adaptive_1h_ETH.json  bull_ath_2024_regime_adaptive_1h_SOL.json  bull_etf_2024_regime_adaptive_1h_ETH.json  bull_etf_2024_regime_adaptive_1h_SOL.json  highvol_2022_regime_adaptive_1h_ETH.json  highvol_2022_regime_adaptive_1h_SOL.json  lowvol_2023_regime_adaptive_1h_ETH.json  lowvol_2023_regime_adaptive_1h_SOL.json  parse_results.py  recent_regime_adaptive_1h_ETH.json  recent_regime_adaptive_1h_SOL.json  run_all.sh
docs/: DEPLOYMENT.md  architecture_prompt.md  backtest-market-periods.md  backtest-report.md  backtest-results.md  marcus_venn_audit.md  strategies.md
gui/: index.html  package-lock.json  package.json  tailwind.config.js
gui/electron/: env.js  license.js  main.js  preload.js
gui/electron/ipc/: ai-digest.js  backtest.js  bot.js  config.js  db.js  license.js  logs.js  market.js  strategies.js  sync.js  ws.js
gui/src/: App.jsx  globals.css
gui/src/components/: AccountPanel.jsx  AiDigest.jsx  BacktestForm.jsx  BotControls.jsx  CodeViewer.jsx  CoinComparison.jsx  ComparisonChart.jsx  ConfirmModal.jsx  EquityCurve.jsx  LogViewer.jsx  MarketPanel.jsx  OrderTable.jsx  PerformanceMetrics.jsx  PositionTable.jsx  Sidebar.jsx  StatsTable.jsx  StrategyList.jsx  SyncPanel.jsx  Toasts.jsx  TradeLog.jsx  TradeNotifications.jsx
gui/src/hooks/: useActiveCoins.js  useAiDigest.js  useBacktest.js  useBotStatus.js  useKeyboardShortcuts.js  useLiveData.js  useMarketData.js  usePrices.js  useToasts.js  useTradeNotifications.js
gui/src/pages/: Backtest.jsx  Dashboard.jsx  LicenseGate.jsx  Market.jsx  Settings.jsx  Strategies.jsx
scripts/: backtest_all.sh  backtest_full_report.sh  backtest_multi_period.sh  grid_search.sh  license_admin.js  start.sh  stop.sh
src/: main.c
src/backtest/: backtest_engine.c  backtest_engine.h
src/core/: config.c  config.h  db.c  db.h  decimal.c  engine.c  engine.h  error.c  error.h  logging.c  logging.h  types.h
src/data/: ai_advisor.c  ai_advisor.h  data_manager.c  data_manager.h  fear_greed.c  fear_greed.h  macro_fetcher.c  macro_fetcher.h  twitter_sentiment.c  twitter_sentiment.h
src/exchange/: hl_json.c  hl_json.h  hl_rest.c  hl_rest.h  hl_signing.c  hl_signing.h  hl_types.c  hl_types.h  hl_ws.c  hl_ws.h  keccak256.c  keccak256.h  order_manager.c  order_manager.h  paper_exchange.c  paper_exchange.h  position_tracker.c  position_tracker.h
src/report/: dashboard.c  dashboard.h  report_gen.c  report_gen.h
src/risk/: risk_manager.c  risk_manager.h
src/strategy/: indicators.c  indicators.h  lua_engine.c  lua_engine.h  strategy_api.c  strategy_api.h
strategies/: BACKTEST_REPORT.md  BACKTEST_RESULTS.md  STRATEGIES.md  bb_kc_squeeze_1h.lua  bb_scalp_15m.lua  bb_sniper_1h.lua  btc_sniper_1h.lua  btc_swing_levels_4h.lua  bull_pullback_1h.lua  dca_eth.lua  doge_sniper_relaxed_1h.lua  elder_mtf_15m.lua  ema_adx_trend_4h.lua  eth_momentum_daily.lua  eth_v2_1h.lua  fib_eth.lua  grid_eth.lua  ichimoku_trend_4h.lua  macd_momentum_1h.lua  momentum_eth.lua  multi_signal_1h.lua  multi_signal_1h.lua.bak  regime_adaptive_1h.lua  regime_multi_1h.lua  rsi_divergence_1h.lua  scalp.lua  scalp_btc.lua  scalp_doge.lua  scalp_eth.lua  scalp_hype.lua  scalp_sol.lua  signal_doge.lua  sniper_1h.lua  sol_range_breakout_1h.lua  stochrsi_scalp_5m.lua  strategy_template.lua  triple_confirm_15m.lua  vwap_reversion_15m.lua  williams_obv_4h.lua
strategies/v2/: btc_v2_1h.lua  doge_v2_1h.lua  sol_v2_1h.lua
tests/: backtest_json.c  backtest_multi_coin.c  backtest_real.c  bench_speed.c  bench_strategies.c  test_advisor.c  test_data.c  test_exchange.c  test_indicators.c  test_lua_engine.c  test_risk.c
tools/: backtest_all.sh  backtest_full_report.sh  backtest_multi_period.sh  candle_fetcher.c  funding_fetcher.c  regime_analyzer.c  regime_analyzer.py  signal_scanner.c  single_position_scanner.py  strategy_analyzer.py
tools/analyzer/: __init__.py  data.py  indicators.py  labeling.py  monte_carlo.py  regime.py  report.py  signals.py  stats.py  walk_forward.py
